force-app/main/default/objects/WD_Candidate__c/WD_Candidate__c.object-meta.xml
<CustomObject>
    <description>Workday Candidate Data</description>
    <label>WD_Candidate</label>
    <nameField>
        <displayFormat>WDC-{000000}</displayFormat>
        <label>WD_Candiate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WD_Candidates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>