force-app/main/default/objects/WD_Candidate__c/fields/Candidate_ID__c.field-meta.xml
<CustomField>
    <fullName>Candidate_ID__c</fullName>
    <inlineHelpText>eg: C1607122</inlineHelpText>
    <label>Candidate ID</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>