force-app/main/default/objects/WD_Candidate__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <description>People who will start in future may not have this assigned yet, but bring in, if and when available</description>
    <inlineHelpText>People who will start in future may not have this assigned yet, but bring in, if and when available</inlineHelpText>
    <label>Employee</label>
    <length>20</length>
    <type>Text</type>
</CustomField>