force-app/main/default/objects/WD_Candidate__c/fields/JobReq_Workday_ID__c.field-meta.xml
<CustomField>
    <fullName>JobReq_Workday_ID__c</fullName>
    <externalId>true</externalId>
    <label>JobReq Workday ID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>