force-app/main/default/objects/WD_Candidate__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <description>Full name (First Name Last Name)</description>
    <inlineHelpText>Full name (First Name Last Name)</inlineHelpText>
    <label>Manager</label>
    <length>100</length>
    <type>Text</type>
</CustomField>