force-app/main/default/objects/WD_Candidate__c/fields/Manager_Employee_Number__c.field-meta.xml
<CustomField>
    <fullName>Manager_Employee_Number__c</fullName>
    <inlineHelpText>eg: &apos;000114&apos;</inlineHelpText>
    <label>Manager Employee Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>