force-app/main/default/objects/WD_Candidate__c/fields/Notes_Comments__c.field-meta.xml
<CustomField>
    <fullName>Notes_Comments__c</fullName>
    <label>Notes/Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>