force-app/main/default/objects/WD_Candidate__c/fields/Offer_Status__c.field-meta.xml
<CustomField>
    <fullName>Offer_Status__c</fullName>
    <inlineHelpText>eg: Offer Accepted, Offer Outstanding, In approval, etc. (status of the offer)</inlineHelpText>
    <label>Offer Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>