force-app/main/default/objects/WD_Candidate__c/fields/Org_3__c.field-meta.xml
<CustomField>
    <fullName>Org_3__c</fullName>
    <description>Full name (First Name Last Name)</description>
    <inlineHelpText>Full name (First Name Last Name)</inlineHelpText>
    <label>Org 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>